# anneal

./: .gitignore  DEVOPS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: results.py  run.py  scoring.py  tasks.py
benchmarks/methods/: __init__.py  anneal_qubo.py  base.py  random_selection.py  top_k_relevance.py  top_k_tokens.py
skills/claude-code/: anneal.md
skills/gemini-cli/: anneal.md
src/anneal/: cli.py  server.py  tracing.py
src/anneal/assembly/: budget_manager.py  result_builder.py
src/anneal/formulation/: candidate_generator.py  coefficient_builder.py  context_qubo_builder.py
src/anneal/graph/: anneal_source.py  base.py  code_review_graph.py  detector.py  graphify.py
src/anneal/indexer/: graph_builder.py  parser.py
tests/: test_init.py  test_server.py
tests/assembly/: test_budget_manager.py  test_result_builder.py
tests/formulation/: test_candidate_generator.py  test_coefficient_builder.py  test_context_qubo_builder.py
tests/graph/: test_anneal_source.py  test_base.py  test_code_review_graph.py  test_detector.py  test_graphify.py
tests/indexer/: test_graph_builder.py  test_parser.py
