[project]
name = "anneal-context"
version = "0.1.2"
description = "Optimal context selection for AI coding assistants using QUBO/Ising formulation"
readme = "README.md"
authors = [
    { name = "Ameya Khot", email = "ameyakhot18@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "spinchain>=0.1.0",
    "dimod>=0.12.0",
    "dwave-neal>=0.6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
anneal-server = "anneal.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anneal"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
